<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/item_ingredient_create_note_shape">

    <EditText
        android:id="@+id/item_ingredient_textfield_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center|left"
        android:backgroundTint="#00ffffff"
        android:layout_marginLeft="8dp"
        android:textSize="10sp"
        android:hint="@string/ingredient_name_unknown"
        android:textColorHint="@color/secondary_font"
        android:textColor="@color/secondary_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Nom de l'ingrédient"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/item_ingredient_create_note_overlay_shape"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/item_ingredient_edittext_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:backgroundTint="@color/primary_font"
            android:gravity="center"
            android:hint="@string/default_ingredient_value"
            android:inputType="numberDecimal"
            android:textColor="@color/primary_font"
            android:textSize="10sp"
            android:importantForAutofill="no" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_ingredient_choicebox_measure"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="4dp">

            <AutoCompleteTextView
                android:id="@+id/item_ingredient_autocomplete_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/default_ingredient_measure"
                android:textColor="@color/primary_font"
                android:textSize="10sp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>