<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_font"
    android:orientation="vertical"
    tools:context=".controller.InfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.KNote.AppBarOverlay">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/info_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:navigationIcon="@drawable/ic_left_arrow"
            app:navigationIconTint="@color/primary_font"
            app:popupTheme="@style/Theme.KNote.PopupOverlay"
            app:title="@string/action_information"
            app:titleTextColor="@color/primary_font" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@drawable/custom_bordered_ripple"
            android:paddingTop="8dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/info_activity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/kanit_regular"
                    android:text="@string/app_name"
                    android:textColor="@color/secondary_font"
                    android:textSize="40dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_activity_title">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/info_activity_version_imageView"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="30dp"
                        android:src="@drawable/ic_info"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/primary" />

                    <View
                        android:id="@+id/info_activity_version_view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="@font/kanit_regular"
                        android:text="@string/version_label"
                        android:textColor="@color/secondary_font"
                        android:textSize="18dp"
                        app:layout_constraintBottom_toTopOf="@+id/info_activity_version_view"
                        app:layout_constraintStart_toEndOf="@+id/info_activity_version_imageView" />

                    <TextView
                        android:id="@+id/info_activity_version_textfield"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:alpha="0.4"
                        android:fontFamily="@font/kanit_regular"
                        android:textColor="@color/secondary_font"
                        android:textSize="14dp"
                        app:layout_constraintStart_toEndOf="@+id/info_activity_version_imageView"
                        app:layout_constraintTop_toBottomOf="@+id/info_activity_version_view" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/info_activity_license_imageView"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="30dp"
                        android:src="@drawable/ic_balance"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/primary" />

                    <View
                        android:id="@+id/info_activity_license_view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="@font/kanit_regular"
                        android:text="@string/license_label"
                        android:textColor="@color/secondary_font"
                        android:textSize="18dp"
                        app:layout_constraintBottom_toTopOf="@+id/info_activity_license_view"
                        app:layout_constraintStart_toEndOf="@+id/info_activity_license_imageView" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:alpha="0.4"
                        android:fontFamily="@font/kanit_regular"
                        android:text="@string/license_value"
                        android:textColor="@color/secondary_font"
                        android:textSize="14dp"
                        app:layout_constraintStart_toEndOf="@+id/info_activity_license_imageView"
                        app:layout_constraintTop_toBottomOf="@+id/info_activity_license_view" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/info_activity_changelog_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/custom_bordered_ripple"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/info_activity_changelog_imageView"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/ic_published"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/kanit_regular"
                        android:text="@string/changelog_label"
                        android:textColor="@color/secondary_font"
                        android:textSize="18dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/info_activity_changelog_imageView"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_activity_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/info_activity_author_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="16dp"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/info_activity_author_imageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_peoples"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/primary" />

                <View
                    android:id="@+id/info_activity_author_view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/kanit_regular"
                    android:text="@string/author_label"
                    android:textColor="@color/secondary_font"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toTopOf="@+id/info_activity_author_view"
                    app:layout_constraintStart_toEndOf="@+id/info_activity_author_imageView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:alpha="0.4"
                    android:fontFamily="@font/kanit_regular"
                    android:text="@string/app_author"
                    android:textColor="@color/secondary_font"
                    android:textSize="14dp"
                    app:layout_constraintStart_toEndOf="@+id/info_activity_author_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/info_activity_author_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_activity_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/info_activity_bug_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:paddingRight="16dp"
                android:background="@drawable/custom_bordered_ripple">

                <ImageView
                    android:id="@+id/info_activity_bug_imageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_bug_report"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/primary" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/info_activity_bug_imageView"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="@font/kanit_regular"
                        android:text="@string/bug_label"
                        android:textColor="@color/secondary_font"
                        android:textSize="17dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:alpha="0.4"
                        android:text="@string/bug_value"
                        android:textColor="@color/secondary_font"
                        android:textSize="12dp" />
                </LinearLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>